fix: align contact and social at equal level

--- a/src/components/styles/Contact.css
+++ b/src/components/styles/Contact.css
@@ -7,7 +7,7 @@
   font-size: 60px;
   font-weight: 400;
   text-transform: uppercase;
-  margin: 0;
+  margin: 0 0 30px 0;
 }
 .contact-flex {
   display: flex;
